--- a/deel-3-webpagina/index.html
+++ b/deel-3-webpagina/index.html
@@ -7,10 +7,48 @@
     <title>Flexbox opdracht 3</title>
 </head>
 <body>
-    <div>
+<header>
+    <div class="company-name">
+        <h2>ANALYTICA</h2>
+    </div>
+    <nav>
+        <ul>
+            <li>About us</li>
+            <li>Strategy</li>
+            <li>Prices</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <div class="title-container">
         <h1>All Your Business Data in One Place</h1>
         <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
             analytics tools.</h3>
     </div>
+    <div class="main-flex-container">
+        <article class="article-container">
+            <p class="flex-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam architecto
+                asperiores,
+                doloribus enim esse, facere harum illum impedit ipsam magni mollitia non possimus quas recusandae
+                veniam? A
+                autem nisi quia.</p>
+        </article>
+        <article class="article-container">
+            <p class="flex-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam architecto
+                asperiores,
+                doloribus enim esse, facere harum illum impedit ipsam magni mollitia non possimus quas recusandae
+                veniam? A
+                autem nisi quia.</p>
+        </article>
+        <article class="article-container">
+            <p class="flex-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam architecto
+                asperiores,
+                doloribus enim esse, facere harum illum impedit ipsam magni mollitia non possimus quas recusandae
+                veniam? A
+                autem nisi quia.</p>
+        </article>
+    </div>
+</main>
 </body>
 </html>
